# InfraGenie

./: .gitignore  1-simple_input_app.py  2-enhanced_code_generator.py  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  sample_output.json  test_app0.ipynb  test_app1.ipynb  test_app2.ipynb  test_app3.ipynb  test_app_fallback.ipynb
src/infra_genie/LLMS/: geminillm.py  groqllm.py  mistral_llm.py  openai_llm.py  qwen_llm.py
src/infra_genie/cache/: redis_cache.py
src/infra_genie/data/: aws_services.json
src/infra_genie/graph/: graph_builder.py  graph_executor.py
src/infra_genie/nodes/: code_generator_node.py  code_process_node.py  code_validator_node.py  decomposed_prompts.py  fallback_node.py  project_node.py
src/infra_genie/notebooks/: test_app1.ipynb  test_app_fallback.ipynb  test_app_moduler.ipynb
src/infra_genie/prompts/: multi-env-fallback-prompt.md  multi-env-prompt.md  terraform-prompt.md  terraform-prompt2.md  terraform-prompt3.md  terraform-prompt4.md  terraform-prompt5.md  terraform_prompt_refined.md
src/infra_genie/state/: infra_genie_state.py
src/infra_genie/ui/: uiconfigfile.ini  uiconfigfile.py
src/infra_genie/ui/streamlit_ui/: streamlit_app.py
src/infra_genie/utils/: Utility.py  components_type.py  constants.py  logging_config.py
