[project]
name = "infragenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langgraph>=0.3.30",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "streamlit>=1.44.1",
]
