[project]
name = "infragenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-google-genai>=2.1.2",
    "langchain-groq>=0.3.2",
    "langchain-mistralai>=0.2.10",
    "langchain-openai>=0.3.12",
    "langchain-qwq>=0.0.7",
    "langfuse>=2.60.3",
    "langgraph>=0.3.30",
    "loguru>=0.7.3",
    "pydantic>=2.11.3",
    "redis>=5.2.1",
    "streamlit>=1.44.1",
]
